global-bootstrap.55.scss
/* ... */
// CARD
// https://getbootstrap.com/docs/4.5/components/card/
// TODO

// CAROUSEL
// https://getbootstrap.com/docs/4.5/components/carousel/
// TODO

// COLLAPSE
// https://getbootstrap.com/docs/4.5/components/collapse/
// TODO

// DROPDOWNS
// https://getbootstrap.com/docs/4.5/components/dropdowns/
// TODO

// FORMS
// https://getbootstrap.com/docs/4.5/components/forms/
// TODO

// INPUT GROUP
// https://getbootstrap.com/docs/4.5/components/input-group/
// TODO

// JUMBOTRON
// https://getbootstrap.com/docs/4.5/components/jumbotron/
// TODO

// LIST GROUP
// https://getbootstrap.com/docs/4.5/components/list-group/
// TODO

// MEDIA OBJECT
// https://getbootstrap.com/docs/4.5/components/media-object/
// TODO

// MODAL
// https://getbootstrap.com/docs/4.5/components/modal/
@if ($socialstack_theme_version == 1) {

    .modal-backdrop {
        background-color: $theme_modal_backdrop;

        &.show {
            opacity: $theme_modal_backdrop_opacity;
        }
    }

    .modal {
        // fix for line-height: 0 being inherited from card footers
        line-height: normal;

        .modal-dialog {
            //width: 616px;
            //max-width: 100vw;
            .modal-content {
                background-color: $theme_modal_bg;
                color: $theme_modal_fg;
                border: $theme_modal_border;
                @include border_radius($theme_modal_border_radius);
                box-shadow: $theme_modal_box_shadow;

                .modal-header {
                    height: $theme_modal_header_height;
                    border-bottom-width: get_theme(border-bottom-width, bootstrap, modal, header);

                    .modal-title {
                        //display: none;
                    }

                    .close {
                        width: $theme_modal_header_height;
                        height: $theme_modal_header_height;
                        background-color: $theme_modal_close_bg;
                        opacity: 1;
                        color: $theme_modal_close_fg;

                        > span {
                            // hide Bootstrap close "x" text ...
                            display: none;
                        }
                        // ... and replace with icon
                        &::after {
                            content: "\f00d"; // fr-times
                            font-family: "Font Awesome 5 Pro";
                            font-weight: 300; // equivalent to .fal
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            display: inline-block;
                            font-style: normal;
                            font-variant: normal;
                            text-rendering: auto;
                            line-height: 1;
                            @include font_size($theme_modal_close_font_size);
                        }
                    }
                }

                .modal-body {
                    // used to render footer controls within .modal-body
                    // (as opposed to the more typical .modal-footer - sometimes unavoidable)
                    .modal-internal-footer {
                        text-align: right;

                        > button, > a {
                            margin-top: 1rem;
                            margin-right: 1rem;

                            &:last-child {
                                margin-right: 0;
                            }
                        }
                    }
                }

                // hide empty footers
                .modal-footer:empty {
                    display: none;
                }
            }
        }

        &.no-header {

            .modal-dialog {

                .modal-content {

                    .modal-header {
                        display: none;
                    }

                    .modal-body {
                        padding-top: 3rem;
                    }

                }

            }

        }

        &.no-title:not(.no-header) {

            .modal-dialog {

                .modal-content {

                    .modal-header {
                        border: 0;

                        .modal-title {
                            display: none;
                        }

                        .close {
                            z-index: 1;
                        }
                    }

                    .modal-body {
                        margin-top: -$theme_modal_header_height;
                        // NB: note titles defined within modal body will need to be wary of being partially obscured by the close button without the following line
                        // (commented as this has the side effect of making content too narrow / bringing footer contrls too far left)
                        //padding-right: calc(1rem + #{$theme_modal_header_height});

                        .modal-internal-footer {
                            //margin-right: -$theme_modal_header_height;
                        }
                    }
                }
            }
        }

        &.no-footer {

            .modal-dialog {

                .modal-content {

                    .modal-footer {
                        display: none;
                    }
                }
            }
        }
    }

    html.device-mobile {

        .modal {

            &.modal-fullscreen-mobile {

                .modal-dialog {
                    margin: 0;

                    .modal-content {
                        height: 100vh;
                        padding-bottom: 4rem; // account for possible docked menu obscuring content
                    }
                }
            }
        }
    }
}
/* ... */

